# expression_template_example

./: .clang-format  .gitignore  10.txt  11.txt  12.txt  CMakeLists.txt  GNUmakefile  Makefile  README.md  benchmark_mult_3.cc  benchmarking.qmd  dual_num1.hh  dual_num2.hpp  dual_num3.hpp  dual_num5.hh  fake_mult_3.cc  full_build.sh  functions.R  handopt.cc  hideous.cc  long_mult_3.cc  main_mult_3.cc  multiply_3.cc  multiply_3.hh  multiply_3_autodiff.cc  only_construct.cc  overload.cpp  overload2.cpp  overload3.cpp  project-description.md  right_fold_mult_3.cc  run_bench_constructor.cc  run_benchmarks.sh  test_dual_num1.cc  test_dual_num5.cc  test_mult_3.cc  timing.txt  timing.txt.no-fold  use_mult_3.cc  xform.py
